--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+nom = "7.1.3"
 num-rational = "0.4"
 num-traits = "0.2"
 pprof = { version = "0.11", features = ["flamegraph"], optional = true }
