--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 nom = "7.1.3"
 num-rational = "0.4"
 num-traits = "0.2"
+once_cell = "1.19.0"
 pprof = { version = "0.11", features = ["flamegraph"], optional = true }
