--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 nom = "7.1.3"
+num-bigint = "0.4.6"
 num-rational = "0.4"
 num-traits = "0.2"
 once_cell = "1.19.0"
