--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ num-rational = "0.4"
 num-traits = "0.2"
 once_cell = "1.19.0"
 pprof = { version = "0.11", features = ["flamegraph"], optional = true }
+proptest = "1.6.0"
