--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,8 @@ num-bigint = "0.4.6"
 num-rational = "0.4"
 num-traits = "0.2"
 once_cell = "1.19.0"
-pprof = { version = "0.11", features = ["flamegraph"], optional = true }
 proptest = "1.6.0"
+cgmath = "0.18.0"
+pprof = { version = "0.14.0", features = ["flamegraph"], optional = true }
+three-d = "0.18.2"
+three-d-asset = "0.9.2"
